<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity">

    <LinearLayout
        android:id="@+id/operandsLL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:padding="10dp">

        <EditText
            android:id="@+id/firstET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstET"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:inputType="numberDecimal"
            />

        <EditText
            android:id="@+id/secondET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/secondET"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:inputType="numberDecimal"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/operatorsLL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/operandsLL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:padding="15dp">

        <Button
            android:id="@+id/plusBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plusBTN"
            android:textSize="20sp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"/>

        <Button
            android:id="@+id/minusBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/minusBTN"
            android:textSize="20sp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"/>

        <Button
            android:id="@+id/multiplyBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/multiplyBTN"
            android:textSize="20sp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"/>

        <Button
            android:id="@+id/divideBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/divideBTN"
            android:textSize="20sp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/submitBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/submitBTN"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/operatorsLL"/>

</androidx.constraintlayout.widget.ConstraintLayout>